syntax = "proto3";

package com.apihug.demo.user.proto.infra.settings.good;

import "extend/constant.proto";
import "swagger/annotations.proto";
import "extend/domain.proto";

option (hope.domain.kind) = ERROR;

enum GoodErrorsEnum {

    option (hope.swagger.enm) = {
        description: "An example error";
    };

    BROKEN_BOX = 0  [
        (hope.constant.field) = {
            code: 1007023, message: "this is big wrong", message2: "wrong*3",
            error: {
                tips: "please contract your admin +3",
                phase: DOMAIN,
                severity: FATAL,
            }}];

    OUT_OF_DATE = 1  [
        (hope.constant.field) = {
            code: 1007024, message: "this is small wrong", message2: "wrong*2",
            error: {
                tips: "please contract your admin +1",
                phase: DOMAIN,
                severity: WARN,
            }}];
}